<resources>
    <string name="app_name">Test and Practice</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="button_login">Login</string>
    <string name="register_login">Create a new account</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_home">Home</string>
    <string name="nav_test">Start Test</string>
    <string name="nav_ranking">Ranking</string>
    <string name="nav_administrate">Administrate</string>
    <string name="nav_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resolution">Resolution</string>
    <string name="edit_resolution">Resolution</string>
    <string name="mute">Mute</string>
    <string name="edit_mute">Mute</string>
    <string name="language">Language</string>
    <string name="edit_language">Language</string>
    <string name="signed_in">Signed In</string>
    <string name="edit_signed_in">Keep Signed In</string>
    <string name="edit_signed_in_summary">Be signed in on your next visit</string>
    <string name="edit_mute_summary">Activate sound</string>
    <string name="edit_language_summary">Change text language</string>
    <string name="email_error">Enter a valid email address</string>
    <string name="password_error">Enter a valid password</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username_login">Username</string>
    <string name="button_register">Register</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm">Confirm</string>
    <string name="tests_taken">Tests Taken</string>
    <string name="highest_rank">Highest Rank</string>
    <string name="take_test">Take Test</string>
    <string name="password_label">Password:</string>
    <string name="email_label">Email:</string>
    <string name="result">The result was</string>
    <string name="difficulty">The difficulty is</string>
    <string name="average_score">Average Score</string>
    <string name="times_taken">Times Taken</string>
    <string name="rank">Rank</string>
    <string name="scores">Scores</string>
    <string name="result_difficulty">Difficulty</string>
    <string name="administrate_message">Select the hierarchy of your new category</string>
    <string name="unauthorized_message">You are unauthorized to administrate exams in this application, please communicate with the staff for further activity</string>
    <string name="name">Name</string>
    <string name="administrate_category_message">Enter information about the category</string>
    <string name="description">Description</string>
    <string name="question_1">Question 1</string>
    <string name="question">Question</string>
    <string name="answer1">Answer 1</string>
    <string name="answer2">Answer 2</string>
    <string name="answer3">Answer 3</string>
    <string name="answer4">Answer 4</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="question_2">Question 2</string>
    <string name="question_3">Question 3</string>
    <string name="question_4">Question 4</string>
    <string name="question_5">Question 5</string>

</resources>
