<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="raistudio.testandpractice.AdministrateCategoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/administrate_category_message"
            android:id="@+id/administrate_category_message_view"
            android:layout_marginTop="@dimen/element_spacing"
            android:textSize="@dimen/normal_text_size"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:id="@+id/administrate_category_name_view"
            android:layout_marginTop="@dimen/element_spacing"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:id="@+id/administrate_category_description_view"
            android:layout_marginTop="@dimen/element_spacing"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/element_spacing"
            android:text="@string/question_1"
            android:textSize="@dimen/normal_text_size"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question"
            android:id="@+id/administrate_category_question1_question_view"
            android:layout_marginTop="@dimen/element_spacing"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer1"
            android:id="@+id/administrate_category_question1_answer1_view"
            android:layout_marginTop="@dimen/element_spacing"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer2"
            android:id="@+id/administrate_category_question1_answer2_view"
            android:layout_marginTop="@dimen/element_spacing"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer3"
            android:id="@+id/administrate_category_question1_answer3_view"
            android:layout_marginTop="@dimen/element_spacing"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer4"
            android:id="@+id/administrate_category_question1_answer4_view"
            android:layout_marginTop="@dimen/element_spacing"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correct_answer"
            android:id="@+id/administrate_category_question1_correct_answer_view"
            android:layout_marginTop="@dimen/element_spacing"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/element_spacing"
            android:text="@string/question_2"
            android:textSize="@dimen/normal_text_size"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question"
            android:id="@+id/administrate_category_question2_question_view"
            android:layout_marginTop="@dimen/element_spacing"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer1"
            android:id="@+id/administrate_category_question2_answer1_view"
            android:layout_marginTop="@dimen/element_spacing"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer2"
            android:id="@+id/administrate_category_question2_answer2_view"
            android:layout_marginTop="@dimen/element_spacing"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer3"
            android:id="@+id/administrate_category_question2_answer3_view"
            android:layout_marginTop="@dimen/element_spacing"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer4"
            android:id="@+id/administrate_category_question2_answer4_view"
            android:layout_marginTop="@dimen/element_spacing"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correct_answer"
            android:id="@+id/administrate_category_question2_correct_answer_view"
            android:layout_marginTop="@dimen/element_spacing"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/element_spacing"
            android:text="@string/question_3"
            android:textSize="@dimen/normal_text_size"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question"
            android:id="@+id/administrate_category_question3_question_view"
            android:layout_marginTop="@dimen/element_spacing"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer1"
            android:id="@+id/administrate_category_question3_answer1_view"
            android:layout_marginTop="@dimen/element_spacing"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer2"
            android:id="@+id/administrate_category_question3_answer2_view"
            android:layout_marginTop="@dimen/element_spacing"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer3"
            android:id="@+id/administrate_category_question3_answer3_view"
            android:layout_marginTop="@dimen/element_spacing"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer4"
            android:id="@+id/administrate_category_question3_answer4_view"
            android:layout_marginTop="@dimen/element_spacing"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correct_answer"
            android:id="@+id/administrate_category_question3_correct_answer_view"
            android:layout_marginTop="@dimen/element_spacing"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/element_spacing"
            android:text="@string/question_4"
            android:textSize="@dimen/normal_text_size"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question"
            android:id="@+id/administrate_category_question4_question_view"
            android:layout_marginTop="@dimen/element_spacing"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer1"
            android:id="@+id/administrate_category_question4_answer1_view"
            android:layout_marginTop="@dimen/element_spacing"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer2"
            android:id="@+id/administrate_category_question4_answer2_view"
            android:layout_marginTop="@dimen/element_spacing"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer3"
            android:id="@+id/administrate_category_question4_answer3_view"
            android:layout_marginTop="@dimen/element_spacing"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer4"
            android:id="@+id/administrate_category_question4_answer4_view"
            android:layout_marginTop="@dimen/element_spacing"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correct_answer"
            android:id="@+id/administrate_category_question4_correct_answer_view"
            android:layout_marginTop="@dimen/element_spacing"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/element_spacing"
            android:text="@string/question_5"
            android:textSize="@dimen/normal_text_size"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question"
            android:id="@+id/administrate_category_question5_question_view"
            android:layout_marginTop="@dimen/element_spacing"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer1"
            android:id="@+id/administrate_category_question5_answer1_view"
            android:layout_marginTop="@dimen/element_spacing"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer2"
            android:id="@+id/administrate_category_question5_answer2_view"
            android:layout_marginTop="@dimen/element_spacing"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer3"
            android:id="@+id/administrate_category_question5_answer3_view"
            android:layout_marginTop="@dimen/element_spacing"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer4"
            android:id="@+id/administrate_category_question5_answer4_view"
            android:layout_marginTop="@dimen/element_spacing"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correct_answer"
            android:id="@+id/administrate_category_question5_correct_answer_view"
            android:layout_marginTop="@dimen/element_spacing"/>

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorPrimary"
            android:layout_margin="5dp"
            android:id="@+id/administrate_category_select_button"
            android:src="@drawable/ic_check_black_24dp" />

    </LinearLayout>

</ScrollView>
