<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="raistudio.testandpractice.RegisterActivity"
    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
    android:layout_marginVertical="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="90dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_register"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:src="@drawable/profile_image"
                app:civ_border_color="#ffffff"
                app:civ_border_width="2dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"/>

            <EditText
                android:id="@+id/username_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/username_login"
                android:inputType="textCapWords"
                android:singleLine="true" />

            <EditText
                android:id="@+id/email_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/email_login"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/password_login"
                android:inputType="textPassword"
                android:singleLine="true" />

            <Button
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/button_register"
                android:onClick="onRegister" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
